# example-actix-web-on-app-runner

./: .dockerignore  Cargo.toml  Dockerfile  README.md
docs/: app_runner_setup.md
src/: main.rs
